test/errors/005_free_var.eu
#!/usr/bin/env eu -B
# -*- mode: conf -*-


x: nonesuch
